# dirty_static

./: .travis.yml  Cargo.toml  README.md  run_tests
src/: lib.rs
