[package]
name = "dirty_const"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]
description = """
A container for an immutable value that allows sneaky reloading in debug mode (via UnsafeCell) while keeping the data safe and constant in release mode.

This allows you to tweak data while testing an application, without having that data be mutable when the application is released.
"""
repository = "https://github.com/mistodon/dirty_const"
readme = "README.md"
categories = ["games"]
license = "CC0-1.0"
edition = "2018"

[dependencies]

[features]
default = []
force-static = []
force-dynamic = []
